Closed Bug 1669964 Opened 4 years ago Closed 4 years ago

x86 implementations of pmax/pmin are incorrect

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

x86_64
All
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: lth, Assigned: lth)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

They don't actually handle NaNs properly because they get the register assignments backward for the wonky semantics of MAXPS and MAXPD.

pmin and pmax handled NaN incorrectly because the wonky semantics of
MINPS and MAXPS require arguments to be reversed to properly handle
NaN for these wasm SIMD instructions.

We fix this the expedient way: we keep the same masm abstraction and
introduce moves to rearrange the arguments. This should be optimized
eventually and a bug will be filed for that now.

Depends on D92926

Pushed by lhansen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8ce9fbf57c65
Fix code generation for pmin/pmax on x86.  r=jseward
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: