Bug 1669964 - Fix code generation for pmin/pmax on x86.  r=jseward

pmin and pmax handled NaN incorrectly because the wonky semantics of
MINPS and MAXPS require arguments to be reversed to properly handle
NaN for these wasm SIMD instructions.

We fix this the expedient way: we keep the same masm abstraction and
introduce moves to rearrange the arguments.  This should be optimized
eventually and a bug will be filed for that now.

Differential Revision: https://phabricator.services.mozilla.com/D92927